--- a/packages/docs/docs/2-features/10-checkboxes.mdx
+++ b/packages/docs/docs/2-features/10-checkboxes.mdx
@@ -35,23 +35,58 @@ in each of your tree item renderers with `<input type="checkbox" {...item.getChe
 As with other tree states, you can manage the checkbox state yourself with the config variable `checkedItems`
 and the state change handler `setCheckedItems`, or let Headless Tree manage this state for your.
 
-## `canCheckFolders`
+## `propagateCheckedState`
 
-You can configure the behavior of clicking the checkbox on folders with the `canCheckFolders` option. If it is enabled,
-checking an folder will only check the folder itself, not its children, and add the id of the folder to the
-`checkedItems`. If it is disabled, checking a folder will check all of its children, and while the checkbox will
-receive the `checked` state (or `indeterminate` if afterwards individual children are unchecked), the folder itself
-will not be added to the `checkedItems`, only its leafs.
+You can configure the behavior of clicking the checkbox on folders with the `propagateCheckedState` option. 
+If enabled, toggling the checkbox state of a folder will toggle the state of all its leafs. The folder itself
+will not be added to the `checkedItems` state, but its checked state will be inferred from the state of
+its leafs, being checked if all leafs are checked, and indeterminate if some leafs are checked
+and some are not. You can also force folders to be independently checkable with `canCheckFolders=true`,
+though be aware that this will mean that folders will receive an explicit `checked` state and will not
+always be directly inferred from their leafs.
 
 :::warning
 
-Trees with `canCheckFolders=false` is currently only supported for synchronous trees, not trees using the Async
+Trees with `propagateCheckedState=true` is currently only supported for synchronous trees, not trees using the Async
 Data Loader feature.
 
 :::
 
-The default for `canCheckFolders` is `true` for asynchronous trees, and `false` for synchronous trees.
+The default for `propagateCheckedState` is `true` for synchronous trees, and `false` for asynchronous trees.
 
-Below, you can see a sample for a tree with checkboxes, where the `canCheckFolders` option is set to `true`:
+Below, you can experiment with the behavior for various combinations of `propagateCheckedState` and `canCheckFolders`:
 
-<DemoBox tags={["feature/checkbox"]} initialStory="react-checkboxes-can-check-folders--can-check-folders" />
+<DemoBox tags={["feature/checkbox"]} initialStory="react-checkboxes-configurability--configurability" />
+
+## Further customizing checkbox behavior
+
+Similar to other Headless Tree features, you can customize feature behavior by overwriting any of the publicly
+exposed methods. Write a custom feature like so:
+
+```ts
+const checkboxOverride: FeatureImplementation<DemoItem> = {
+  itemInstance: {
+    toggleCheckedState: ({ item }) => {
+      // Custom logic to toggle the checked state of an item
+    },
+    
+    getCheckedState: ({ tree, item }) => {
+      // Custom logic to determine the checked state of an item
+      return CheckedState.Indeterminate;
+    },
+  },
+};
+```
+
+Then include it in your tree configuration:
+
+```ts
+const tree = createTree({
+  features: [...otherFeatures, checkboxesFeature, checkboxOverride],
+  // other tree config
+});
+```
+
+You can find some samples below. In the select input below, you can choose between several samples.
+
+<DemoBox tags={["checkbox/customizability"]} initialStory="react-checkboxes-custom-behavior-checked-state-as-radio-buttons--checked-state-as-radio-buttons" />
